tests/miniJava/neg/004312_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { new int [] java ( ) { return 0 ; } }
